# ha-ipaper-addon

./: README.md  repository.json
ha_ipaper/: Dockerfile  build.yaml  config.yaml  pyproject.toml  run.sh
ha_ipaper/rootfs/etc/services.d/ha_ipaper/: run
ha_ipaper/src/ha_ipaper/: __init__.py  __main__.py  config.py  homeassistant.py  server.py
ha_ipaper/src/ha_ipaper/html-template/: debug.html  index.html  style.css
ha_ipaper/src/ha_ipaper/html-template/components/: climates.html  covers.html  forecast.html  lights.html  sensors.html  switches.html
ha_ipaper/translations/: en.yaml  it.yaml
